--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,9 +1,29 @@
 server {
     listen 80;
+    server_tokens  off;
+    server_name 51.250.22.110;
+
+    location /static/ {
+        root /var/html/;
+    }
+
+    location /media/ {
+        root /var/html/;
+    }
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+
+    location /admin/ {
+        proxy_pass http://backend:8000/admin/;
+    }
+
+    location /api/ {
+        proxy_pass http://backend:8000/;
+    }
+
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
