--- a/backend/foodgram/requirements.txt
+++ b/backend/foodgram/requirements.txt
@@ -19,6 +19,10 @@ djangorestframework-simplejwt==4.7.2
 djoser==2.1.0
 exceptiongroup==1.0.4
 flake8==5.0.4
+flake8-broken-line==0.6.0
+flake8-isort==5.0.3
+flake8-plugin-utils==1.3.2
+flake8-return==1.2.0
 gunicorn==20.0.4
 idna==3.4
 importlib-metadata==1.7.0
@@ -30,6 +34,7 @@ MarkupSafe==2.1.1
 mccabe==0.7.0
 oauthlib==3.2.2
 packaging==21.3
+pep8-naming==0.13.3
 Pillow==9.3.0
 pluggy==1.0.0
 psycopg2-binary==2.8.6
@@ -51,7 +56,7 @@ social-auth-app-django==4.0.0
 social-auth-core==4.3.0
 sqlparse==0.3.1
 tomli==2.0.1
-typing_extensions==4.4.0
+typing-extensions==4.4.0
 uritemplate==4.1.1
 urllib3==1.26.13
 zipp==3.11.0
