--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     server_tokens  off;
-    server_name 51.250.22.110;
+    server_name 127.0.0.1 51.250.22.110;
 
     location /static/ {
         root /var/html/;
