--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -3,7 +3,11 @@ server {
     server_tokens  off;
     server_name 127.0.0.1 51.250.22.110;
 
-    location /static/ {
+    location /static/admin/ {
+        root /var/html/;
+    }
+
+    location /static/rest_framework/ {
         root /var/html/;
     }
 
@@ -21,6 +25,7 @@ server {
     }
 
     location /api/ {
+        proxy_set_header Host $host;
         proxy_pass http://backend:8000/;
     }
 
