some fixes and deploy

--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -20,6 +20,8 @@ services:
     image: kserm27/foodgram_frontend:latest
     volumes:
       - ../frontend/:/app/result_build/
+    depends_on:
+      - backend
   nginx:
     image: nginx:1.19.3
     ports:
@@ -31,7 +33,6 @@ services:
       - static_value:/var/html/static/
       - media_value:/var/html/media/
     depends_on:
-      - backend
       - frontend
 
 volumes:
