--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     server_tokens  off;
-    server_name 127.0.0.1 51.250.22.110;
+    server_name 51.250.22.110;
 
     location /static/admin/ {
         root /var/html/;
@@ -25,8 +25,10 @@ server {
     }
 
     location /api/ {
-        proxy_set_header Host $host;
-        proxy_pass http://backend:8000/;
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Forwarded-Host $host;
+        proxy_set_header        X-Forwarded-Server $host;
+        proxy_pass http://backend:8000;
     }
 
     location / {
