--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -2,18 +2,16 @@ server {
     listen 80;
     server_tokens  off;
     server_name 51.250.22.110;
+    root /var/html/;
 
-    location /static/admin/ {
-        root /var/html/;
-    }
+    # location /static/admin/ {
+    # }
 
-    location /static/rest_framework/ {
-        root /var/html/;
-    }
+    # location /static/rest_framework/ {
+    # }
 
-    location /media/ {
-        root /var/html/;
-    }
+    # location /media/ {
+    # }
 
     location /api/docs/ {
         root /usr/share/nginx/html;
@@ -21,7 +19,7 @@ server {
     }
 
     location /admin/ {
-        proxy_pass http://backend:8000/admin/;
+        proxy_pass http://backend:8000/;
     }
 
     location /api/ {
@@ -35,10 +33,10 @@ server {
         root /usr/share/nginx/html;
         index  index.html index.htm;
         try_files $uri /index.html;
-        proxy_set_header        Host $host;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        X-Forwarded-Proto $scheme;
+        # proxy_set_header        Host $host;
+        # proxy_set_header        X-Real-IP $remote_addr;
+        # proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        # proxy_set_header        X-Forwarded-Proto $scheme;
       }
       error_page   500 502 503 504  /50x.html;
       location = /50x.html {
