--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,17 +1,11 @@
 server {
     listen 80;
+
     server_tokens  off;
-    server_name 51.250.22.110;
+
+    server_name 51.250.22.110 foodgram-eks.ddns.net;
+
     root /var/html/;
-
-    # location /static/admin/ {
-    # }
-
-    # location /static/rest_framework/ {
-    # }
-
-    # location /media/ {
-    # }
 
     location /api/docs/ {
         root /usr/share/nginx/html;
@@ -33,10 +27,6 @@ server {
         root /usr/share/nginx/html;
         index  index.html index.htm;
         try_files $uri /index.html;
-        # proxy_set_header        Host $host;
-        # proxy_set_header        X-Real-IP $remote_addr;
-        # proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        # proxy_set_header        X-Forwarded-Proto $scheme;
       }
       error_page   500 502 503 504  /50x.html;
       location = /50x.html {
